# apeiron-cipher

./: .aider.chat.history.md  .aider.input.history  .gitignore  .releaserc.json  AGENTS.md  ARCHITECTURE.md  Agents.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Makefile  README.md  STATE_OF_THE_GAME.md  SUMMARY.md  check_models.py  direct_test.py  exchange_test.py  poc.py  respond_sessions.db  run.sh  smoke_test.py
.aider.tags.cache.v4/: cache.db
.cargo/: config.toml
.github/workflows/: automation-approve.yml  build-native-target.yml  codeql.yml  kanban-publish.yml  lint-suppression-guard.yml  pub-crate-guard.yml  release-game.yml  release-server.yml  release.yml  rust.yml  test.yml
.goose/recipes/: apeiron-rpi-implementation-review.yaml  apeiron-rpi-implementation.yaml  apeiron-rpi-pipeline.yaml  apeiron-rpi-plan-issue.yaml  apeiron-rpi-plan-review.yaml
.opencode/: package-lock.json
.opencode/skills/bmad-gds-create-game-brief/: SKILL.md
.opencode/skills/bmad-gds-create-gdd/: SKILL.md
.plan/: test-extraction-plan.md
_bmad/_config/: agent-manifest.csv  bmad-help.csv  files-manifest.csv  manifest.yaml  workflow-manifest.csv
_bmad/_memory/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/gds/: config.yaml
_bmad/tea/: config.yaml
apeiron_flow/: README.md  pyproject.toml
apeiron_flow/src/apeiron_flow/: config.py  github_app.py  github_http.py  labels.py  main.py  migrate_in_review.py  repo.py
apeiron_flow/src/apeiron_flow/crews/dev_crew/: dev_crew.py
apeiron_flow/src/apeiron_flow/crews/dev_crew/config/: agents.yaml  tasks.yaml
apeiron_flow/src/apeiron_flow/crews/respond_crew/: respond_crew.py
apeiron_flow/src/apeiron_flow/crews/respond_crew/config/: agents.yaml  tasks.yaml
apeiron_flow/src/apeiron_flow/crews/review_crew/: review_crew.py
apeiron_flow/src/apeiron_flow/crews/review_crew/config/: agents.yaml  tasks.yaml
apeiron_flow/src/apeiron_flow/crews/triage_crew/: triage_crew.py
apeiron_flow/src/apeiron_flow/crews/triage_crew/config/: agents.yaml  tasks.yaml
apeiron_flow/src/apeiron_flow/tools/: custom_tool.py  dev_tools.py  respond_tools.py  review_tools.py  triage_tools.py
apeiron_flow/tests/: conftest.py  test_label_wiring.py  test_labels.py  test_make_check_gate.py  test_migrate_in_review.py  test_suite.py  test_triage_flow.py
assets/config/: biomes.toml  carry.toml  combinations.toml  confidence.toml  contextual_materials.toml  input.toml  knowledge_graph.toml  orbital_config.toml  planet_environment.toml  scene.toml  star_types.toml  vehicle.toml  world_generation.toml
assets/exterior/: surface_mineral_deposits.toml
assets/materials/: calcium.toml  classifications.toml  cobaltine.toml  ferrite.toml  osmium.toml  phosphite.toml  prismate.toml  silite.toml  sulfurite.toml  verdant.toml  volatite.toml
crewai-orchestrator/: Makefile
docs/adr/: 001-crewai-flow-over-langchain.md  002-issue-lifecycle-status-labels.md
docs/bmad/: agent-workflow-reference.md  agent-workflow.md  epics.md  game-brief.md  gdd.md  project-context.md
docs/modding/: README.md  asset-schemas.md  best-practices.md  data-formats.md  extensibility-points.md  manifest-schema.md  mod-structure.md
hooks/: pre-commit
infra/agent/: Dockerfile  agent-entrypoint.sh
infra/n8n/: .env.example  docker-compose.yml  entrypoint.sh  init-pg.sql
infra/orchestrator/: .releaserc.server.json  STATE_OF_THE_ORCHESTRATOR.md  go.mod  go.sum
infra/signaling/: .env.example  Dockerfile  apeiron-signaling.service  docker-compose.yml
infra/signaling-schema/: README.md  package-lock.json  package.json  tsconfig.json
kanban/: .env.example  .releaserc.json  Dockerfile  STATE_OF_THE_KANBAN.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
kanban/public/: config.json
kanban/src/: App.jsx  main.jsx
mods/example.crystal-lichen/: README.md  mod.toml
mods/example.deep-sign/: README.md  mod.toml
mods/example.deep-sign-extended/: mod.toml
mods/example.glimmersteel/: README.md  mod.toml
mods/example.solar-array/: README.md  mod.toml
scripts/: check-lint-suppression.sh  check-pub-crate.sh
src/: camera.rs  carry.rs  carry_feedback.rs  classification.rs  combination.rs  contextual_materials.rs  debug_overlay.rs  descriptions.rs  diegetic_ui.rs  exterior_generation.rs  fabricator.rs  heat.rs  input.rs  interaction.rs  journal.rs  journal_tests.rs  knowledge_graph.rs  lib.rs  main.rs  matchmaking.rs  materials.rs  mod_asset_validator.rs  mod_manifest.rs  mod_registry.rs  mod_validator.rs  naming.rs  observation.rs  persistence.rs  player.rs  scene.rs  seed_util.rs  seeds.rs  solar_system.rs  solar_system_tests.rs  surface.rs  test_support.rs  vehicle.rs  world_generation.rs  world_generation_tests.rs
src/persistence/: decay.rs  error.rs  mutation.rs  schema.rs  wal.rs
src/world_generation/: exterior.rs  exterior_tests.rs
tests/: carry_feedback_integration.rs  carry_processing.rs  carry_scenarios.rs  confidence_config_integration.rs  material_regression.rs  mod_asset_validation.rs  mod_manifest_integration.rs  mod_validation_pipeline_integration.rs  wal_crash.rs
tests/scenarios/: helpers.rs  mod.rs
thoughts/clarifications/: issue-344-answers.md
thoughts/plans/: 2026-06-01-2129-well-known-material-seed-collision-detection.md  2026-06-02-0748-story-342-5-normalize-combination-pair-keys.md  2026-06-02-0757-issue-408-normalize-combination-pair-keys.md  2026-06-02-1527-issue-344-seed-newtypes.md  2026-06-02-2324-issue-344-seed-domain-newtypes.md  2026-06-04-0816-issue-344-seed-domain-typing.md
thoughts/research/: 2026-06-01-2133-epic-342-material-seed-combination.md  2026-06-02-0813-issue-344-seed-newtypes.md  2026-06-02-2310-issue-344-seed-domain-newtypes.md  2026-06-04-0806-issue-344-seed-domain-typing.md
thoughts/reviews/: 2026-06-02-0816-issue-408-implementation-review.md  2026-06-02-1556-issue-344-plan-review.md  2026-06-02-2335-issue-344-plan-review.md  2026-06-02-2345-issue-344-plan-review.md  2026-06-04-0822-issue-344-plan-review.md  2026-06-04-0829-issue-344-plan-review.md
(+141 files in other folders)
