[package]
name = "apeiron-cipher"
version = "0.1.0"
edition = "2024"

[dependencies]
# Bevy game engine — ECS-based 3D game framework
bevy = "0.18.1"
# Action-based input mapping for Bevy — maps raw inputs to named actions
leafwing-input-manager = "0.20.0"
# Serialization framework — used for TOML config deserialization
serde = { version = "1.0.228", features = ["derive"] }
# TOML parser — used for player-editable config files
toml = "1.0.7"
# Compile-time enum iteration — used to drive ObservationCategory display
# order from the enum definition itself, so adding a new variant cannot
# silently hide that category from the journal UI.
strum = { version = "0.27", features = ["derive"] }
# Graph data structure — used for the KnowledgeGraph resource backing the
# cross-reference system; serde-1 feature enables save/load serialization.
petgraph = { version = "0.6", features = ["serde-1"] }
# Lock-free MPSC channel — used by MutationBus in the persistence layer to
# let ECS systems emit world mutations without blocking on I/O.
crossbeam-channel = "0.5"
# Binary serialization — used to encode WorldMutation variants in the WAL
# (write-ahead log).  serde compatibility mode keeps one set of derive attrs.
bincode = { version = "2", features = ["serde"] }

# JSON serializer — used at runtime for WebSocket signaling envelope encoding.
serde_json = "1.0"
# Multi-threaded async runtime — drives the WebSocket and WebRTC background thread.
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "net"] }
# Async WebSocket client — connects to the signaling server over WS.
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
# WebRTC peer-connection library (Tokio-coupled stable branch, v0.17).
webrtc = "0.17"
# URL parsing — used to validate the signaling server endpoint at startup.
url = "2"
# Stream/sink combinators — required for split() on tokio-tungstenite WebSocketStream.
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }

[dev-dependencies]
# Temporary directory helper — provides hermetic test fixtures for mod_manifest tests
tempfile = "3"
