[project]
name = "apeiron_flow"
version = "0.1.0"
description = "Apeiron Cipher CrewAI Flow — implements GitHub issues via a Rust/Bevy dev crew"
authors = [{ name = "NullOperator" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=1.14.7a2",
    "litellm",
    "PyJWT",
    "requests",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
apeiron_flow = "apeiron_flow.main:kickoff"
plot = "apeiron_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# main.py intentionally sets env vars (litellm noise suppression) before
# pulling in crewai/pydantic — E402 is expected here.
"src/apeiron_flow/main.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["apeiron_flow"]
